--- a/src/components/Tables/CompareTable.css
+++ b/src/components/Tables/CompareTable.css
@@ -1,6 +1,3 @@
-table,
-th,
-td {
-    border: 1px solid black;
-    border-collapse: collapse;
+textarea:focus, input:focus{
+    outline: none;
 }
