chore: update icon version / add bg-color to main

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,9 +12,12 @@ a {
   color: inherit;
 }
 
+body {
+  background-color: $main-bg;
+}
+
 .main {
   font-family: "Inter", sans-serif;
-  background-color: $main-bg;
   color: $main-color;
 }
 
