--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,7 +24,7 @@
   .box {
     padding: 20px;
     border-radius: 10px;
-    border: 2px solid $soft-bg;
+    border: 2px solid var(--soft-bg);
   }
 
   .box1 {
