--- a/src/components/add/add.scss
+++ b/src/components/add/add.scss
@@ -14,13 +14,13 @@
   .modal {
     padding: 50px;
     border-radius: 10px;
-    background-color: $main-bg;
+    background-color: var(--main-bg);
     position: relative;
 
     h1 {
       margin-bottom: 40px;
       font-size: 24px;
-      color: $soft-color;
+      color: var(--soft-color);
     }
 
     .close {
@@ -52,7 +52,7 @@
           background-color: transparent;
           color: white;
           outline: none;
-          border: 1px solid $soft-color;
+          border: 1px solid var(--soft-color);
           border-radius: 3px;
         }
       }
