--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,3 +1,4 @@
+@import "../../styles/variables.scss";
 @import "../../styles/responsive.scss";
 
 .navbar {
@@ -69,6 +70,10 @@
         justify-content: center;
         font-size: 12px;
       }
+    }
+
+    .theme {
+      cursor: pointer;
     }
 
     .user {
