--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,107 +1,109 @@
-@mixin mobile {
-    @media screen and (max-width: 480px) {
-      @content;
+@import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
+
+@each $theme-name, $theme-variables in $themes {
+  .formContainer[app-theme="#{$theme-name}"] {
+    @each $variable-name, $variable-value in $theme-variables {
+      --#{$variable-name}: #{$variable-value};
+
+      @if ($variable-name == "primary") {
+        --#{$variable-name}-dark: #{darken($variable-value, 10%)};
+        --#{$variable-name}-darker: #{darken($variable-value, 20%)};
+      }
     }
   }
-  @mixin tablet {
-    @media screen and (max-width: 768px) {
-      @content;
-    }
-  }
-  @mixin laptop {
-    @media screen and (max-width: 1200px) {
-      @content;
-    }
-  }
-  
-  .formContainer {
-    background-color: #a7bcff;
-    height: 100vh;
+}
+
+.formContainer {
+  background-color: var(--soft-bg);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .formWrapper {
+    background-color: var(--main-bg);
+    padding: 20px 60px;
+    border-radius: 10px;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     align-items: center;
-    justify-content: center;
-  
-    .formWrapper {
-      background-color: white;
-      padding: 20px 60px;
-      border-radius: 10px;
+
+    .logo {
+      display: flex;
+      gap: 15px;
+      p {
+        color: var(--main-color);
+        font-weight: bold;
+        font-size: 24px;
+      }
+    }
+
+    .title {
+      color: var(--main-color);
+      font-size: 16px;
+    }
+
+    .buttonLoad {
+      background-color: #04AA6D;
+      border: none;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+
+      .fa {
+        margin-left: -12px;
+        margin-right: 8px;
+      }
+    }
+
+    form {
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      align-items: center;
-  
-      .logo {
-        display: flex;
-        gap: 15px;
-        p {
-          font-weight: bold;
-          font-size: 24px;
-        }
-      }
-  
-      .title {
-        color: #5d5b8d;
-        font-size: 16px;
-      }
+      gap: 15px;
 
-      .buttonLoad {
-        background-color: #04AA6D;
+      input {
+        padding: 15px;
         border: none;
+        width: 250px;
+        border-bottom: 1px solid #a7bcff;
+        &::placeholder {
+          color: rgb(175, 175, 175);
+        }
+      }
+
+      button {
+        background-color: #7b96ec;
         color: white;
-        padding: 12px 24px;
-        font-size: 16px;
-
-        .fa {
-          margin-left: -12px;
-          margin-right: 8px;
-        }
+        padding: 10px;
+        font-weight: bold;
+        border: none;
+        cursor: pointer;
       }
-  
-      form {
+
+      label {
         display: flex;
-        flex-direction: column;
-        gap: 15px;
-  
-        input {
-          padding: 15px;
-          border: none;
-          width: 250px;
-          border-bottom: 1px solid #a7bcff;
-          &::placeholder {
-            color: rgb(175, 175, 175);
-          }
-        }
-  
-        button {
-          background-color: #7b96ec;
-          color: white;
-          padding: 10px;
-          font-weight: bold;
-          border: none;
-          cursor: pointer;
-        }
-  
-        label {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-          color: #8da4f1;
-          font-size: 12px;
-          cursor: pointer;
-  
-          img {
-            width: 32px;
-          }
-        }
-      }
-      p {
-        color: #5d5b8d;
+        align-items: center;
+        gap: 10px;
+        color: #8da4f1;
         font-size: 12px;
-        margin-top: 10px;
+        cursor: pointer;
 
-        .link {
-          text-decoration: underline;
+        img {
+          width: 32px;
         }
       }
     }
+    p {
+      color: var(--main-color);
+      font-size: 12px;
+      margin-top: 10px;
+
+      .link {
+        color: var(--main-color);
+        text-decoration: underline;
+      }
+    }
   }
+}
