--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,19 @@
 @import "./variables.scss";
 @import "./responsive.scss";
 
+@each $theme-name, $theme-variables in $themes {
+  .main[app-theme="#{$theme-name}"] {
+    @each $variable-name, $variable-value in $theme-variables {
+      --#{$variable-name}: #{$variable-value};
+
+      @if ($variable-name == "primary") {
+        --#{$variable-name}-dark: #{darken($variable-value, 10%)};
+        --#{$variable-name}-darker: #{darken($variable-value, 20%)};
+      }
+    }
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,13 +25,11 @@ a {
   color: inherit;
 }
 
-body {
-  background-color: $main-bg;
-}
-
 .main {
   font-family: "Inter", sans-serif;
-  color: $main-color;
+  height: 100%;
+  color: var(--main-color);
+  background-color: var(--main-bg);
 }
 
 .container {
@@ -26,9 +37,9 @@ body {
 }
 
 .menuContainer {
-  width: 250px;
-  padding: 5px 20px;
-  border-right: 2px solid $soft-bg;
+  width: $menu-size;
+  padding: 5px 0px 5px 20px;
+  border-right: 2px solid var(--soft-bg);
 
   @include lg{
     width: max-content;
@@ -37,5 +48,5 @@ body {
 
 .contentContainer {
   padding: 5px 20px;
-  width: 100%;
+  width: calc(100vw - $menu-size);
 }
