--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,18 @@
-// BG
-$main-bg: #2a3447;
-$soft-bg: #384256;
-$dark-bg: #222b3c;
-//TEXT
-$main-color: white;
-$soft-color: #ddd;
-$dark-color: #2a3447;
+$themes: (
+  "light": (
+    "main-bg": #f9fbff,
+    "soft-bg": #dde8f0,
+    "main-color": #4f5869,
+    "soft-color": #9ea2ad,
+    "dark-color": #ebf4f5
+  ),
+  "dark": (
+    "main-bg": #2a3447,
+    "soft-bg": #384256,
+    "main-color": #ffffff,
+    "soft-color": #ddd,
+    "dark-color": #2a3447
+  )
+);
+
+$menu-size: 250px;
