--- a/src/components/addModal/addModal.scss
+++ b/src/components/addModal/addModal.scss
@@ -1,12 +1,13 @@
 @import "../../styles/variables.scss";
+@import "../../styles/responsive.scss";
 
 .add {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.724);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,6 +17,8 @@
     border-radius: 10px;
     background-color: var(--main-bg);
     position: relative;
+    height: 90%;
+    overflow: hidden;
 
     h1 {
       margin-bottom: 40px;
@@ -25,8 +28,8 @@
 
     .close {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 15px;
+      right: 15px;
       cursor: pointer;
     }
 
@@ -62,5 +65,9 @@
         cursor: pointer;
       }
     }
+  }
+
+  .modal:hover {
+    overflow: auto;
   }
 }
