--- a/src/pages/cars/cars.scss
+++ b/src/pages/cars/cars.scss
@@ -7,8 +7,16 @@
     margin-bottom: 20px;
 
     button{
-      padding: 5px;
       cursor: pointer;
+      background-color: #04AA6D;
+      border: none;
+      color: white;
+      padding: 15px 20px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      border-radius: 5%;
     }
   }
 }
