--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,47 +1,71 @@
 @import "../../styles/variables.scss";
 @import "../../styles/responsive.scss";
 
+@each $theme-name, $theme-variables in $themes {
+  .home[app-theme="#{$theme-name}"] {
+    @each $variable-name, $variable-value in $theme-variables {
+      --#{$variable-name}: #{$variable-value};
+
+      @if ($variable-name == "primary") {
+        --#{$variable-name}-dark: #{darken($variable-value, 10%)};
+        --#{$variable-name}-darker: #{darken($variable-value, 20%)};
+      }
+    }
+  }
+}
+
 .home {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: minmax(180px, auto);
-  grid-auto-flow: dense;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  @include xl{
-    grid-template-columns: repeat(3, 1fr);
-  }
-  @include lg{
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include md {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  @include sm {
-    grid-auto-rows: minmax(120px, auto);
-  }
+  .content {
+    text-align: center;
 
-  .box {
-    padding: 20px;
-    border-radius: 10px;
-    border: 2px solid var(--soft-bg);
-  }
+    .header {
+      font-size: 5em;
+      line-height: 1em;
+      color: var(--soft-color);
+      text-transform: uppercase;
+    }
 
-  .box1 {
-    grid-column: span 1;
-    grid-row: span 3;
-  }
+    h4 {
+      font-size: 30px;
+      font-weight: 400;
+      margin: 20px 0px;
+      color: var(--soft-color);
+    }
 
-  .box4 {
-    grid-column: span 1;
-    grid-row: span 3;
-  }
-  .box7 {
-    grid-column: span 2;
-    grid-row: span 2;
+    p {
+      font-size: 20px;
+      font-weight: 200;
+      color: var(--soft-color);
+      margin-bottom: 20px;
+      display: inline;
 
-    @include md {
-      display: none;
+      .hightlight {
+        color: #f65039;
+      }
+    }
+
+    .icons i {
+      font-size: 100px;
+      margin: 20px 40px;
+    }
+
+    .icons i:first-of-type {
+      margin-left: 0;
+      color: #6690fb;
+    }
+
+    .icons i:nth-child(2) {
+      color: #04AA6D;
+    }
+
+    .icons i:last-of-type {
+      margin-right: 0;
+      color: #fec304;
     }
   }
 }
