chore: add fuels page / add disableEdit option for datagrid

--- a/src/components/dataTable/dataTable.scss
+++ b/src/components/dataTable/dataTable.scss
@@ -18,6 +18,8 @@
     .action{
       display: flex;
       gap: 15px;
+      justify-content: center;
+      align-items: center;
 
       img{
         width: 20px;
